Riboswitches/Programs/rnamotif-3.1.1/src/y.output
Terminals unused in grammar

   SYM_PAIRSET
   SYM_NEGATE
   SYM_CALL
   SYM_LIST
   SYM_KW_STREF
   SYM_IX_STREF
   SYM_ERROR


State 199 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: parm_part descr_part site_part score_part

    2 $@1: %empty

    3 parm_part: parm_hdr $@1 pd_list
    4          | empty

    5 parm_hdr: SYM_PARMS
    6         | empty

    7 $@2: %empty

    8 descr_part: SYM_DESCR $@2 se_list

    9 $@3: %empty

   10 site_part: SYM_SITES $@3 kw_site_list
   11          | %empty

   12 $@4: %empty

   13 score_part: SYM_SCORE $@4 rule_list
   14           | %empty

   15 pd_list: pdef
   16        | pdef pd_list

   17 pdef: asgn SYM_SEMICOLON

   18 se_list: strel
   19        | strel se_list

   20 strel: strhdr
   21      | kw_stref

   22 strhdr: strtype

   23 strtype: SYM_SE
   24        | SYM_CTX
   25        | SYM_SS
   26        | SYM_H5
   27        | SYM_H3
   28        | SYM_P5
   29        | SYM_P3
   30        | SYM_T1
   31        | SYM_T2
   32        | SYM_T3
   33        | SYM_Q1
   34        | SYM_Q2
   35        | SYM_Q3
   36        | SYM_Q4

   37 kw_site_list: kw_site
   38             | kw_site_list kw_site

   39 kw_site: kw_pairing SYM_IN pairset

   40 site: pairing SYM_IN pairset

   41 rule_list: rule
   42          | rule rule_list

   43 $@5: %empty

   44 rule: pattern $@5 action
   45     | action

   46 pattern: SYM_BEGIN
   47        | SYM_END
   48        | expr

   49 action: SYM_LCURLY stmt_list SYM_RCURLY

   50 stmt_list: stmt
   51          | stmt stmt_list

   52 stmt: accept_stmt
   53     | asgn_stmt
   54     | auto_stmt
   55     | break_stmt
   56     | call_stmt
   57     | cmpd_stmt
   58     | continue_stmt
   59     | empty_stmt
   60     | for_stmt
   61     | hold_stmt
   62     | if_stmt
   63     | reject_stmt
   64     | release_stmt
   65     | while_stmt

   66 accept_stmt: SYM_ACCEPT SYM_SEMICOLON

   67 asgn_stmt: asgn SYM_SEMICOLON

   68 auto_stmt: auto_lval SYM_SEMICOLON

   69 break_stmt: SYM_BREAK loop_level SYM_SEMICOLON

   70 call_stmt: fcall SYM_SEMICOLON

   71 cmpd_stmt: SYM_LCURLY stmt_list SYM_RCURLY

   72 continue_stmt: SYM_CONTINUE loop_level SYM_SEMICOLON

   73 empty_stmt: empty SYM_SEMICOLON

   74 for_stmt: for_hdr stmt

   75 hold_stmt: SYM_HOLD ident SYM_SEMICOLON

   76 if_stmt: if_hdr stmt

   77 $@6: %empty

   78 if_stmt: if_hdr stmt SYM_ELSE $@6 stmt

   79 reject_stmt: SYM_REJECT SYM_SEMICOLON

   80 release_stmt: SYM_RELEASE ident SYM_SEMICOLON

   81 @7: %empty

   82 while_stmt: SYM_WHILE SYM_LPAREN expr @7 SYM_RPAREN stmt

   83 loop_level: SYM_INT
   84           | %empty

   85 $@8: %empty

   86 if_hdr: SYM_IF SYM_LPAREN expr $@8 SYM_RPAREN

   87 for_hdr: SYM_FOR SYM_LPAREN for_ctrl SYM_RPAREN

   88 $@9: %empty

   89 $@10: %empty

   90 for_ctrl: for_init $@9 SYM_SEMICOLON for_test $@10 SYM_SEMICOLON for_incr

   91 for_init: asgn
   92         | auto_lval
   93         | empty

   94 for_test: asgn
   95         | expr
   96         | empty

   97 for_incr: asgn
   98         | auto_lval
   99         | empty

  100 asgn: lval asgn_op asgn
  101     | lval asgn_op expr

  102 asgn_op: SYM_ASSIGN
  103        | SYM_MINUS_ASSIGN
  104        | SYM_PLUS_ASSIGN
  105        | SYM_PERCENT_ASSIGN
  106        | SYM_SLASH_ASSIGN
  107        | SYM_STAR_ASSIGN

  108 expr: conj
  109     | expr SYM_OR conj

  110 conj: compare
  111     | compare SYM_AND conj

  112 compare: site
  113        | a_expr
  114        | a_expr comp_op a_expr

  115 comp_op: SYM_DONT_MATCH
  116        | SYM_EQUAL
  117        | SYM_GREATER
  118        | SYM_GREATER_EQUAL
  119        | SYM_LESS
  120        | SYM_LESS_EQUAL
  121        | SYM_MATCH
  122        | SYM_NOT_EQUAL

  123 a_expr: term
  124       | a_expr add_op term

  125 add_op: SYM_PLUS
  126       | SYM_MINUS

  127 term: factor
  128     | term mul_op factor

  129 mul_op: SYM_PERCENT
  130       | SYM_SLASH
  131       | SYM_STAR

  132 factor: primary
  133       | SYM_MINUS primary
  134       | SYM_NOT primary
  135       | stref

  136 pairing: stref
  137        | stref SYM_COLON pairing

  138 kw_pairing: kw_stref
  139           | kw_stref SYM_COLON kw_pairing

  140 primary: lval
  141        | literal
  142        | fcall
  143        | SYM_LPAREN expr SYM_RPAREN

  144 fcall: ident SYM_LPAREN e_list SYM_RPAREN

  145 stref: kw_stref
  146      | ix_stref

  147 kw_stref: strhdr SYM_LPAREN a_list SYM_RPAREN

  148 ix_stref: strhdr SYM_LBRACK e_list SYM_RBRACK

  149 lval: ident
  150     | auto_lval

  151 auto_lval: incr_op ident
  152          | ident incr_op

  153 literal: SYM_INT
  154        | SYM_FLOAT
  155        | SYM_DOLLAR
  156        | string
  157        | pairset

  158 ident: SYM_IDENT

  159 incr_op: SYM_MINUS_MINUS
  160        | SYM_PLUS_PLUS

  161 e_list: expr
  162       | expr SYM_COMMA e_list

  163 a_list: asgn
  164       | asgn SYM_COMMA a_list

  165 $@11: %empty

  166 pairset: SYM_LCURLY $@11 s_list SYM_RCURLY

  167 s_list: string
  168       | string SYM_COMMA s_list

  169 string: SYM_STRING

  170 empty: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
SYM_PARMS (258) 5
SYM_DESCR (259) 8
SYM_SITES (260) 10
SYM_SCORE (261) 13
SYM_SE (262) 23
SYM_CTX (263) 24
SYM_SS (264) 25
SYM_H5 (265) 26
SYM_H3 (266) 27
SYM_P5 (267) 28
SYM_P3 (268) 29
SYM_T1 (269) 30
SYM_T2 (270) 31
SYM_T3 (271) 32
SYM_Q1 (272) 33
SYM_Q2 (273) 34
SYM_Q3 (274) 35
SYM_Q4 (275) 36
SYM_ACCEPT (276) 66
SYM_BEGIN (277) 46
SYM_BREAK (278) 69
SYM_CONTINUE (279) 72
SYM_ELSE (280) 78
SYM_END (281) 47
SYM_FOR (282) 87
SYM_HOLD (283) 75
SYM_IF (284) 86
SYM_IN (285) 39 40
SYM_REJECT (286) 79
SYM_RELEASE (287) 80
SYM_WHILE (288) 82
SYM_IDENT (289) 158
SYM_INT (290) 83 153
SYM_FLOAT (291) 154
SYM_STRING (292) 169
SYM_PAIRSET (293)
SYM_AND (294) 111
SYM_ASSIGN (295) 102
SYM_DOLLAR (296) 155
SYM_DONT_MATCH (297) 115
SYM_EQUAL (298) 116
SYM_GREATER (299) 117
SYM_GREATER_EQUAL (300) 118
SYM_LESS (301) 119
SYM_LESS_EQUAL (302) 120
SYM_MATCH (303) 121
SYM_MINUS (304) 126 133
SYM_MINUS_ASSIGN (305) 103
SYM_MINUS_MINUS (306) 159
SYM_NEGATE (307)
SYM_NOT (308) 134
SYM_NOT_EQUAL (309) 122
SYM_OR (310) 109
SYM_PERCENT (311) 129
SYM_PERCENT_ASSIGN (312) 105
SYM_PLUS (313) 125
SYM_PLUS_ASSIGN (314) 104
SYM_PLUS_PLUS (315) 160
SYM_STAR (316) 131
SYM_STAR_ASSIGN (317) 107
SYM_SLASH (318) 130
SYM_SLASH_ASSIGN (319) 106
SYM_LPAREN (320) 82 86 87 143 144 147
SYM_RPAREN (321) 82 86 87 143 144 147
SYM_LBRACK (322) 148
SYM_RBRACK (323) 148
SYM_LCURLY (324) 49 71 166
SYM_RCURLY (325) 49 71 166
SYM_COLON (326) 137 139
SYM_COMMA (327) 162 164 168
SYM_SEMICOLON (328) 17 66 67 68 69 70 72 73 75 79 80 90
SYM_CALL (329)
SYM_LIST (330)
SYM_KW_STREF (331)
SYM_IX_STREF (332)
SYM_ERROR (333)


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
program (80)
    on left: 1, on right: 0
parm_part (81)
    on left: 3 4, on right: 1
$@1 (82)
    on left: 2, on right: 3
parm_hdr (83)
    on left: 5 6, on right: 3
descr_part (84)
    on left: 8, on right: 1
$@2 (85)
    on left: 7, on right: 8
site_part (86)
    on left: 10 11, on right: 1
$@3 (87)
    on left: 9, on right: 10
score_part (88)
    on left: 13 14, on right: 1
$@4 (89)
    on left: 12, on right: 13
pd_list (90)
    on left: 15 16, on right: 3 16
pdef (91)
    on left: 17, on right: 15 16
se_list (92)
    on left: 18 19, on right: 8 19
strel (93)
    on left: 20 21, on right: 18 19
strhdr (94)
    on left: 22, on right: 20 147 148
strtype (95)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36, on right: 22
kw_site_list (96)
    on left: 37 38, on right: 10 38
kw_site (97)
    on left: 39, on right: 37 38
site (98)
    on left: 40, on right: 112
rule_list (99)
    on left: 41 42, on right: 13 42
rule (100)
    on left: 44 45, on right: 41 42
$@5 (101)
    on left: 43, on right: 44
pattern (102)
    on left: 46 47 48, on right: 44
action (103)
    on left: 49, on right: 44 45
stmt_list (104)
    on left: 50 51, on right: 49 51 71
stmt (105)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65, on right: 50
    51 74 76 78 82
accept_stmt (106)
    on left: 66, on right: 52
asgn_stmt (107)
    on left: 67, on right: 53
auto_stmt (108)
    on left: 68, on right: 54
break_stmt (109)
    on left: 69, on right: 55
call_stmt (110)
    on left: 70, on right: 56
cmpd_stmt (111)
    on left: 71, on right: 57
continue_stmt (112)
    on left: 72, on right: 58
empty_stmt (113)
    on left: 73, on right: 59
for_stmt (114)
    on left: 74, on right: 60
hold_stmt (115)
    on left: 75, on right: 61
if_stmt (116)
    on left: 76 78, on right: 62
$@6 (117)
    on left: 77, on right: 78
reject_stmt (118)
    on left: 79, on right: 63
release_stmt (119)
    on left: 80, on right: 64
while_stmt (120)
    on left: 82, on right: 65
@7 (121)
    on left: 81, on right: 82
loop_level (122)
    on left: 83 84, on right: 69 72
if_hdr (123)
    on left: 86, on right: 76 78
$@8 (124)
    on left: 85, on right: 86
for_hdr (125)
    on left: 87, on right: 74
for_ctrl (126)
    on left: 90, on right: 87
$@9 (127)
    on left: 88, on right: 90
$@10 (128)
    on left: 89, on right: 90
for_init (129)
    on left: 91 92 93, on right: 90
for_test (130)
    on left: 94 95 96, on right: 90
for_incr (131)
    on left: 97 98 99, on right: 90
asgn (132)
    on left: 100 101, on right: 17 67 91 94 97 100 163 164
asgn_op (133)
    on left: 102 103 104 105 106 107, on right: 100 101
expr (134)
    on left: 108 109, on right: 48 82 86 95 101 109 143 161 162
conj (135)
    on left: 110 111, on right: 108 109 111
compare (136)
    on left: 112 113 114, on right: 110 111
comp_op (137)
    on left: 115 116 117 118 119 120 121 122, on right: 114
a_expr (138)
    on left: 123 124, on right: 113 114 124
add_op (139)
    on left: 125 126, on right: 124
term (140)
    on left: 127 128, on right: 123 124 128
mul_op (141)
    on left: 129 130 131, on right: 128
factor (142)
    on left: 132 133 134 135, on right: 127 128
pairing (143)
    on left: 136 137, on right: 40 137
kw_pairing (144)
    on left: 138 139, on right: 39 139
primary (145)
    on left: 140 141 142 143, on right: 132 133 134
fcall (146)
    on left: 144, on right: 70 142
stref (147)
    on left: 145 146, on right: 135 136 137
kw_stref (148)
    on left: 147, on right: 21 138 139 145
ix_stref (149)
    on left: 148, on right: 146
lval (150)
    on left: 149 150, on right: 100 101 140
auto_lval (151)
    on left: 151 152, on right: 68 92 98 150
literal (152)
    on left: 153 154 155 156 157, on right: 141
ident (153)
    on left: 158, on right: 75 80 144 149 151 152
incr_op (154)
    on left: 159 160, on right: 151 152
e_list (155)
    on left: 161 162, on right: 144 148 162
a_list (156)
    on left: 163 164, on right: 147 164
pairset (157)
    on left: 166, on right: 39 40 157
$@11 (158)
    on left: 165, on right: 166
s_list (159)
    on left: 167 168, on right: 166 168
string (160)
    on left: 169, on right: 156 167 168
empty (161)
    on left: 170, on right: 4 6 73 93 96 99


State 0

    0 $accept: . program $end

    SYM_PARMS  shift, and go to state 1

    $default  reduce using rule 170 (empty)

    program    go to state 2
    parm_part  go to state 3
    parm_hdr   go to state 4
    empty      go to state 5


State 1

    5 parm_hdr: SYM_PARMS .

    $default  reduce using rule 5 (parm_hdr)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: parm_part . descr_part site_part score_part

    SYM_DESCR  shift, and go to state 7

    descr_part  go to state 8


State 4

    3 parm_part: parm_hdr . $@1 pd_list

    $default  reduce using rule 2 ($@1)

    $@1  go to state 9


State 5

    4 parm_part: empty .
    6 parm_hdr: empty .

    SYM_DESCR  reduce using rule 4 (parm_part)
    $default   reduce using rule 6 (parm_hdr)


State 6

    0 $accept: program $end .

    $default  accept


State 7

    8 descr_part: SYM_DESCR . $@2 se_list

    $default  reduce using rule 7 ($@2)

    $@2  go to state 10


State 8

    1 program: parm_part descr_part . site_part score_part

    SYM_SITES  shift, and go to state 11

    $default  reduce using rule 11 (site_part)

    site_part  go to state 12


State 9

    3 parm_part: parm_hdr $@1 . pd_list

    SYM_IDENT        shift, and go to state 13
    SYM_MINUS_MINUS  shift, and go to state 14
    SYM_PLUS_PLUS    shift, and go to state 15

    pd_list    go to state 16
    pdef       go to state 17
    asgn       go to state 18
    lval       go to state 19
    auto_lval  go to state 20
    ident      go to state 21
    incr_op    go to state 22


State 10

    8 descr_part: SYM_DESCR $@2 . se_list

    SYM_SE   shift, and go to state 23
    SYM_CTX  shift, and go to state 24
    SYM_SS   shift, and go to state 25
    SYM_H5   shift, and go to state 26
    SYM_H3   shift, and go to state 27
    SYM_P5   shift, and go to state 28
    SYM_P3   shift, and go to state 29
    SYM_T1   shift, and go to state 30
    SYM_T2   shift, and go to state 31
    SYM_T3   shift, and go to state 32
    SYM_Q1   shift, and go to state 33
    SYM_Q2   shift, and go to state 34
    SYM_Q3   shift, and go to state 35
    SYM_Q4   shift, and go to state 36

    se_list   go to state 37
    strel     go to state 38
    strhdr    go to state 39
    strtype   go to state 40
    kw_stref  go to state 41


State 11

   10 site_part: SYM_SITES . $@3 kw_site_list

    $default  reduce using rule 9 ($@3)

    $@3  go to state 42


State 12

    1 program: parm_part descr_part site_part . score_part

    SYM_SCORE  shift, and go to state 43

    $default  reduce using rule 14 (score_part)

    score_part  go to state 44


State 13

  158 ident: SYM_IDENT .

    $default  reduce using rule 158 (ident)


State 14

  159 incr_op: SYM_MINUS_MINUS .

    $default  reduce using rule 159 (incr_op)


State 15

  160 incr_op: SYM_PLUS_PLUS .

    $default  reduce using rule 160 (incr_op)


State 16

    3 parm_part: parm_hdr $@1 pd_list .

    $default  reduce using rule 3 (parm_part)


State 17

   15 pd_list: pdef .
   16        | pdef . pd_list

    SYM_IDENT        shift, and go to state 13
    SYM_MINUS_MINUS  shift, and go to state 14
    SYM_PLUS_PLUS    shift, and go to state 15

    $default  reduce using rule 15 (pd_list)

    pd_list    go to state 45
    pdef       go to state 17
    asgn       go to state 18
    lval       go to state 19
    auto_lval  go to state 20
    ident      go to state 21
    incr_op    go to state 22


State 18

   17 pdef: asgn . SYM_SEMICOLON

    SYM_SEMICOLON  shift, and go to state 46


State 19

  100 asgn: lval . asgn_op asgn
  101     | lval . asgn_op expr

    SYM_ASSIGN          shift, and go to state 47
    SYM_MINUS_ASSIGN    shift, and go to state 48
    SYM_PERCENT_ASSIGN  shift, and go to state 49
    SYM_PLUS_ASSIGN     shift, and go to state 50
    SYM_STAR_ASSIGN     shift, and go to state 51
    SYM_SLASH_ASSIGN    shift, and go to state 52

    asgn_op  go to state 53


State 20

  150 lval: auto_lval .

    $default  reduce using rule 150 (lval)


State 21

  149 lval: ident .
  152 auto_lval: ident . incr_op

    SYM_MINUS_MINUS  shift, and go to state 14
    SYM_PLUS_PLUS    shift, and go to state 15

    $default  reduce using rule 149 (lval)

    incr_op  go to state 54


State 22

  151 auto_lval: incr_op . ident

    SYM_IDENT  shift, and go to state 13

    ident  go to state 55


State 23

   23 strtype: SYM_SE .

    $default  reduce using rule 23 (strtype)


State 24

   24 strtype: SYM_CTX .

    $default  reduce using rule 24 (strtype)


State 25

   25 strtype: SYM_SS .

    $default  reduce using rule 25 (strtype)


State 26

   26 strtype: SYM_H5 .

    $default  reduce using rule 26 (strtype)


State 27

   27 strtype: SYM_H3 .

    $default  reduce using rule 27 (strtype)


State 28

   28 strtype: SYM_P5 .

    $default  reduce using rule 28 (strtype)


State 29

   29 strtype: SYM_P3 .

    $default  reduce using rule 29 (strtype)


State 30

   30 strtype: SYM_T1 .

    $default  reduce using rule 30 (strtype)


State 31

   31 strtype: SYM_T2 .

    $default  reduce using rule 31 (strtype)


State 32

   32 strtype: SYM_T3 .

    $default  reduce using rule 32 (strtype)


State 33

   33 strtype: SYM_Q1 .

    $default  reduce using rule 33 (strtype)


State 34

   34 strtype: SYM_Q2 .

    $default  reduce using rule 34 (strtype)


State 35

   35 strtype: SYM_Q3 .

    $default  reduce using rule 35 (strtype)


State 36

   36 strtype: SYM_Q4 .

    $default  reduce using rule 36 (strtype)


State 37

    8 descr_part: SYM_DESCR $@2 se_list .

    $default  reduce using rule 8 (descr_part)


State 38

   18 se_list: strel .
   19        | strel . se_list

    SYM_SE   shift, and go to state 23
    SYM_CTX  shift, and go to state 24
    SYM_SS   shift, and go to state 25
    SYM_H5   shift, and go to state 26
    SYM_H3   shift, and go to state 27
    SYM_P5   shift, and go to state 28
    SYM_P3   shift, and go to state 29
    SYM_T1   shift, and go to state 30
    SYM_T2   shift, and go to state 31
    SYM_T3   shift, and go to state 32
    SYM_Q1   shift, and go to state 33
    SYM_Q2   shift, and go to state 34
    SYM_Q3   shift, and go to state 35
    SYM_Q4   shift, and go to state 36

    $default  reduce using rule 18 (se_list)

    se_list   go to state 56
    strel     go to state 38
    strhdr    go to state 39
    strtype   go to state 40
    kw_stref  go to state 41


State 39

   20 strel: strhdr .
  147 kw_stref: strhdr . SYM_LPAREN a_list SYM_RPAREN

    SYM_LPAREN  shift, and go to state 57

    $default  reduce using rule 20 (strel)


State 40

   22 strhdr: strtype .

    $default  reduce using rule 22 (strhdr)


State 41

   21 strel: kw_stref .

    $default  reduce using rule 21 (strel)


State 42

   10 site_part: SYM_SITES $@3 . kw_site_list

    SYM_SE   shift, and go to state 23
    SYM_CTX  shift, and go to state 24
    SYM_SS   shift, and go to state 25
    SYM_H5   shift, and go to state 26
    SYM_H3   shift, and go to state 27
    SYM_P5   shift, and go to state 28
    SYM_P3   shift, and go to state 29
    SYM_T1   shift, and go to state 30
    SYM_T2   shift, and go to state 31
    SYM_T3   shift, and go to state 32
    SYM_Q1   shift, and go to state 33
    SYM_Q2   shift, and go to state 34
    SYM_Q3   shift, and go to state 35
    SYM_Q4   shift, and go to state 36

    strhdr        go to state 58
    strtype       go to state 40
    kw_site_list  go to state 59
    kw_site       go to state 60
    kw_pairing    go to state 61
    kw_stref      go to state 62


State 43

   13 score_part: SYM_SCORE . $@4 rule_list

    $default  reduce using rule 12 ($@4)

    $@4  go to state 63


State 44

    1 program: parm_part descr_part site_part score_part .

    $default  reduce using rule 1 (program)


State 45

   16 pd_list: pdef pd_list .

    $default  reduce using rule 16 (pd_list)


State 46

   17 pdef: asgn SYM_SEMICOLON .

    $default  reduce using rule 17 (pdef)


State 47

  102 asgn_op: SYM_ASSIGN .

    $default  reduce using rule 102 (asgn_op)


State 48

  103 asgn_op: SYM_MINUS_ASSIGN .

    $default  reduce using rule 103 (asgn_op)


State 49

  105 asgn_op: SYM_PERCENT_ASSIGN .

    $default  reduce using rule 105 (asgn_op)


State 50

  104 asgn_op: SYM_PLUS_ASSIGN .

    $default  reduce using rule 104 (asgn_op)


State 51

  107 asgn_op: SYM_STAR_ASSIGN .

    $default  reduce using rule 107 (asgn_op)


State 52

  106 asgn_op: SYM_SLASH_ASSIGN .

    $default  reduce using rule 106 (asgn_op)


State 53

  100 asgn: lval asgn_op . asgn
  101     | lval asgn_op . expr

    SYM_SE           shift, and go to state 23
    SYM_CTX          shift, and go to state 24
    SYM_SS           shift, and go to state 25
    SYM_H5           shift, and go to state 26
    SYM_H3           shift, and go to state 27
    SYM_P5           shift, and go to state 28
    SYM_P3           shift, and go to state 29
    SYM_T1           shift, and go to state 30
    SYM_T2           shift, and go to state 31
    SYM_T3           shift, and go to state 32
    SYM_Q1           shift, and go to state 33
    SYM_Q2           shift, and go to state 34
    SYM_Q3           shift, and go to state 35
    SYM_Q4           shift, and go to state 36
    SYM_IDENT        shift, and go to state 13
    SYM_INT          shift, and go to state 64
    SYM_FLOAT        shift, and go to state 65
    SYM_STRING       shift, and go to state 66
    SYM_DOLLAR       shift, and go to state 67
    SYM_MINUS        shift, and go to state 68
    SYM_MINUS_MINUS  shift, and go to state 14
    SYM_NOT          shift, and go to state 69
    SYM_PLUS_PLUS    shift, and go to state 15
    SYM_LPAREN       shift, and go to state 70
    SYM_LCURLY       shift, and go to state 71

    strhdr     go to state 72
    strtype    go to state 40
    site       go to state 73
    asgn       go to state 74
    expr       go to state 75
    conj       go to state 76
    compare    go to state 77
    a_expr     go to state 78
    term       go to state 79
    factor     go to state 80
    pairing    go to state 81
    primary    go to state 82
    fcall      go to state 83
    stref      go to state 84
    kw_stref   go to state 85
    ix_stref   go to state 86
    lval       go to state 87
    auto_lval  go to state 20
    literal    go to state 88
    ident      go to state 89
    incr_op    go to state 22
    pairset    go to state 90
    string     go to state 91


State 54

  152 auto_lval: ident incr_op .

    $default  reduce using rule 152 (auto_lval)


State 55

  151 auto_lval: incr_op ident .

    $default  reduce using rule 151 (auto_lval)


State 56

   19 se_list: strel se_list .

    $default  reduce using rule 19 (se_list)


State 57

  147 kw_stref: strhdr SYM_LPAREN . a_list SYM_RPAREN

    SYM_IDENT        shift, and go to state 13
    SYM_MINUS_MINUS  shift, and go to state 14
    SYM_PLUS_PLUS    shift, and go to state 15

    asgn       go to state 92
    lval       go to state 19
    auto_lval  go to state 20
    ident      go to state 21
    incr_op    go to state 22
    a_list     go to state 93


State 58

  147 kw_stref: strhdr . SYM_LPAREN a_list SYM_RPAREN

    SYM_LPAREN  shift, and go to state 57


State 59

   10 site_part: SYM_SITES $@3 kw_site_list .
   38 kw_site_list: kw_site_list . kw_site

    SYM_SE   shift, and go to state 23
    SYM_CTX  shift, and go to state 24
    SYM_SS   shift, and go to state 25
    SYM_H5   shift, and go to state 26
    SYM_H3   shift, and go to state 27
    SYM_P5   shift, and go to state 28
    SYM_P3   shift, and go to state 29
    SYM_T1   shift, and go to state 30
    SYM_T2   shift, and go to state 31
    SYM_T3   shift, and go to state 32
    SYM_Q1   shift, and go to state 33
    SYM_Q2   shift, and go to state 34
    SYM_Q3   shift, and go to state 35
    SYM_Q4   shift, and go to state 36

    $default  reduce using rule 10 (site_part)

    strhdr      go to state 58
    strtype     go to state 40
    kw_site     go to state 94
    kw_pairing  go to state 61
    kw_stref    go to state 62


State 60

   37 kw_site_list: kw_site .

    $default  reduce using rule 37 (kw_site_list)


State 61

   39 kw_site: kw_pairing . SYM_IN pairset

    SYM_IN  shift, and go to state 95


State 62

  138 kw_pairing: kw_stref .
  139           | kw_stref . SYM_COLON kw_pairing

    SYM_COLON  shift, and go to state 96

    $default  reduce using rule 138 (kw_pairing)


State 63

   13 score_part: SYM_SCORE $@4 . rule_list

    SYM_SE           shift, and go to state 23
    SYM_CTX          shift, and go to state 24
    SYM_SS           shift, and go to state 25
    SYM_H5           shift, and go to state 26
    SYM_H3           shift, and go to state 27
    SYM_P5           shift, and go to state 28
    SYM_P3           shift, and go to state 29
    SYM_T1           shift, and go to state 30
    SYM_T2           shift, and go to state 31
    SYM_T3           shift, and go to state 32
    SYM_Q1           shift, and go to state 33
    SYM_Q2           shift, and go to state 34
    SYM_Q3           shift, and go to state 35
    SYM_Q4           shift, and go to state 36
    SYM_BEGIN        shift, and go to state 97
    SYM_END          shift, and go to state 98
    SYM_IDENT        shift, and go to state 13
    SYM_INT          shift, and go to state 64
    SYM_FLOAT        shift, and go to state 65
    SYM_STRING       shift, and go to state 66
    SYM_DOLLAR       shift, and go to state 67
    SYM_MINUS        shift, and go to state 68
    SYM_MINUS_MINUS  shift, and go to state 14
    SYM_NOT          shift, and go to state 69
    SYM_PLUS_PLUS    shift, and go to state 15
    SYM_LPAREN       shift, and go to state 70
    SYM_LCURLY       shift, and go to state 99

    strhdr     go to state 72
    strtype    go to state 40
    site       go to state 73
    rule_list  go to state 100
    rule       go to state 101
    pattern    go to state 102
    action     go to state 103
    expr       go to state 104
    conj       go to state 76
    compare    go to state 77
    a_expr     go to state 78
    term       go to state 79
    factor     go to state 80
    pairing    go to state 81
    primary    go to state 82
    fcall      go to state 83
    stref      go to state 84
    kw_stref   go to state 85
    ix_stref   go to state 86
    lval       go to state 105
    auto_lval  go to state 20
    literal    go to state 88
    ident      go to state 89
    incr_op    go to state 22
    pairset    go to state 90
    string     go to state 91


State 64

  153 literal: SYM_INT .

    $default  reduce using rule 153 (literal)


State 65

  154 literal: SYM_FLOAT .

    $default  reduce using rule 154 (literal)


State 66

  169 string: SYM_STRING .

    $default  reduce using rule 169 (string)


State 67

  155 literal: SYM_DOLLAR .

    $default  reduce using rule 155 (literal)


State 68

  133 factor: SYM_MINUS . primary

    SYM_IDENT        shift, and go to state 13
    SYM_INT          shift, and go to state 64
    SYM_FLOAT        shift, and go to state 65
    SYM_STRING       shift, and go to state 66
    SYM_DOLLAR       shift, and go to state 67
    SYM_MINUS_MINUS  shift, and go to state 14
    SYM_PLUS_PLUS    shift, and go to state 15
    SYM_LPAREN       shift, and go to state 70
    SYM_LCURLY       shift, and go to state 71

    primary    go to state 106
    fcall      go to state 83
    lval       go to state 105
    auto_lval  go to state 20
    literal    go to state 88
    ident      go to state 89
    incr_op    go to state 22
    pairset    go to state 90
    string     go to state 91


State 69

  134 factor: SYM_NOT . primary

    SYM_IDENT        shift, and go to state 13
    SYM_INT          shift, and go to state 64
    SYM_FLOAT        shift, and go to state 65
    SYM_STRING       shift, and go to state 66
    SYM_DOLLAR       shift, and go to state 67
    SYM_MINUS_MINUS  shift, and go to state 14
    SYM_PLUS_PLUS    shift, and go to state 15
    SYM_LPAREN       shift, and go to state 70
    SYM_LCURLY       shift, and go to state 71

    primary    go to state 107
    fcall      go to state 83
    lval       go to state 105
    auto_lval  go to state 20
    literal    go to state 88
    ident      go to state 89
    incr_op    go to state 22
    pairset    go to state 90
    string     go to state 91


State 70

  143 primary: SYM_LPAREN . expr SYM_RPAREN

    SYM_SE           shift, and go to state 23
    SYM_CTX          shift, and go to state 24
    SYM_SS           shift, and go to state 25
    SYM_H5           shift, and go to state 26
    SYM_H3           shift, and go to state 27
    SYM_P5           shift, and go to state 28
    SYM_P3           shift, and go to state 29
    SYM_T1           shift, and go to state 30
    SYM_T2           shift, and go to state 31
    SYM_T3           shift, and go to state 32
    SYM_Q1           shift, and go to state 33
    SYM_Q2           shift, and go to state 34
    SYM_Q3           shift, and go to state 35
    SYM_Q4           shift, and go to state 36
    SYM_IDENT        shift, and go to state 13
    SYM_INT          shift, and go to state 64
    SYM_FLOAT        shift, and go to state 65
    SYM_STRING       shift, and go to state 66
    SYM_DOLLAR       shift, and go to state 67
    SYM_MINUS        shift, and go to state 68
    SYM_MINUS_MINUS  shift, and go to state 14
    SYM_NOT          shift, and go to state 69
    SYM_PLUS_PLUS    shift, and go to state 15
    SYM_LPAREN       shift, and go to state 70
    SYM_LCURLY       shift, and go to state 71

    strhdr     go to state 72
    strtype    go to state 40
    site       go to state 73
    expr       go to state 108
    conj       go to state 76
    compare    go to state 77
    a_expr     go to state 78
    term       go to state 79
    factor     go to state 80
    pairing    go to state 81
    primary    go to state 82
    fcall      go to state 83
    stref      go to state 84
    kw_stref   go to state 85
    ix_stref   go to state 86
    lval       go to state 105
    auto_lval  go to state 20
    literal    go to state 88
    ident      go to state 89
    incr_op    go to state 22
    pairset    go to state 90
    string     go to state 91


State 71

  166 pairset: SYM_LCURLY . $@11 s_list SYM_RCURLY

    $default  reduce using rule 165 ($@11)

    $@11  go to state 109


State 72

  147 kw_stref: strhdr . SYM_LPAREN a_list SYM_RPAREN
  148 ix_stref: strhdr . SYM_LBRACK e_list SYM_RBRACK

    SYM_LPAREN  shift, and go to state 57
    SYM_LBRACK  shift, and go to state 110


State 73

  112 compare: site .

    $default  reduce using rule 112 (compare)


State 74

  100 asgn: lval asgn_op asgn .

    $default  reduce using rule 100 (asgn)


State 75

  101 asgn: lval asgn_op expr .
  109 expr: expr . SYM_OR conj

    SYM_OR  shift, and go to state 111

    $default  reduce using rule 101 (asgn)


State 76

  108 expr: conj .

    $default  reduce using rule 108 (expr)


State 77

  110 conj: compare .
  111     | compare . SYM_AND conj

    SYM_AND  shift, and go to state 112

    $default  reduce using rule 110 (conj)


State 78

  113 compare: a_expr .
  114        | a_expr . comp_op a_expr
  124 a_expr: a_expr . add_op term
